fix: on some sites or dark mode, the font color turns white and is invisible to users
issue(#125)

--- a/src/content/display/style/display.styl
+++ b/src/content/display/style/display.styl
@@ -83,6 +83,7 @@
     flex-grow: 1;
     flex-shrink: 1;
     word-break: break-word;
+    color: black;
 }
 
 #edge-translate-panel-highlight {
