--- a/src/content/display/style/result.styl
+++ b/src/content/display/style/result.styl
@@ -4,6 +4,7 @@
  * start content style
  */
 #edge-translate-result {
+    width: 100%;
     box-sizing: border-box;
     padding: 5% 10%;
     font-weight: normal;
@@ -155,6 +156,7 @@
 
     .phonetic-symbol {
         width: 100%;
+
         .phonetic-symbol-content {
             display: block;
             margin-left: 15%;
